Fix vertical alignment of menu buttons

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -7,6 +7,7 @@
 
 #navbar li {
   float: left;
+  height: 60px;
 }
 
 #navbar li a {
@@ -15,6 +16,8 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    line-height: 25px;
+    height: 60px;
 }
 
 #navbar li a:hover {
